# generic-data-encryption-module

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
config/: config.json
examples/: example_usage.cpp
src/: encryption_module.cpp  encryption_module.h  main.cpp
tests/: test_encryption_module.cpp
